--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "swiper": "^6.2.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,6 +51,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
-    "@types/react-transition-group": "^4.4.0"
+    "@types/react-transition-group": "^4.4.0",
+    "@types/uuid": "^8.3.0"
   }
 }
