--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^0.1.1",
     "axios": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.8.6",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
@@ -18,7 +20,8 @@
     "redux-thunk": "^2.3.0",
     "swiper": "^6.2.0",
     "typescript": "~3.7.2",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,6 +55,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-transition-group": "^4.4.0",
-    "@types/uuid": "^8.3.0"
+    "@types/uuid": "^8.3.0",
+    "@types/yup": "^0.29.7"
   }
 }
