chore: update firebase hosting and database configs

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,14 @@
 {
   "projects": {
     "default": "slippers-react"
+  },
+  "targets": {
+    "slippers-react": {
+      "hosting": {
+        "app": [
+          "slippers-react"
+        ]
+      }
+    }
   }
 }
