--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/react-transition-group": "^4.4.0",
     "@types/uuid": "^8.3.0",
-    "@types/yup": "^0.29.7"
+    "@types/yup": "^0.29.7",
+    "firebase": "^8.0.0"
   }
 }
