feat: check last location and redirect to it on sign in

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-hook-form": "^6.8.6",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
+    "react-router-last-location": "^2.0.1",
     "react-scripts": "3.4.3",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
